Fix overlapping logo when nav is not rendered

--- a/app/javascript/stylesheets/hitobito/_layout.scss
+++ b/app/javascript/stylesheets/hitobito/_layout.scss
@@ -101,7 +101,8 @@ body {
     }
   }
 
-  .is-logged-out & {
+  .is-logged-out &,
+  &.is-nav-not-rendered {
     padding-top: 7rem;
   }
 }
